# seating-plan-neighbor-query-app

./: .gitignore  CMakeLists.txt  README.md  directNeighbors.cpp  directNeighbors.hpp  enterStudents.cpp  enterStudents.hpp  indirectNeighbors.cpp  indirectNeighbors.hpp  loadRoom.cpp  loadRoom.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  newRoom.cpp  newRoom.hpp  queryStudents.cpp  queryStudents.hpp  room.cpp  room.hpp  seat.cpp  seat.hpp  tests.cpp
documents/requirements/: constraints.md  funktionale.md  nicht-funktionale.md
documents/user_stories/: README.md  belegungsmuster.md  nachbarnAbfragen.md  neuerSitzplan.md  platzZuweisung.md  sitzplanLaden.md
